Sort sections in getSectionNamesForCourse